<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SignupActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@drawable/applogo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/sen_regular"
                android:gravity="center"
                android:text="@string/str_enter_below_info"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintTop_toBottomOf="@id/ivLogo" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/rectangle_grey"
                android:fontFamily="@font/sen_regular"
                android:hint="@string/str_name"
                android:inputType="textPersonName"
                android:maxLength="50"
                android:maxLines="1"
                android:paddingStart="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/colorgrey"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <EditText
                android:id="@+id/edtEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/rectangle_grey"
                android:fontFamily="@font/sen_regular"
                android:hint="@string/str_email"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                android:maxLines="1"
                android:paddingStart="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/colorgrey"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/edtName" />

            <EditText
                android:id="@+id/edtMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/rectangle_grey"
                android:fontFamily="@font/sen_regular"
                android:hint="@string/str_mobile_number"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingStart="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/colorgrey"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/edtEmailAddress" />


            <RelativeLayout
                android:id="@+id/rrCategory"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/rectangle_grey"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/edtMobileNumber">

                <AutoCompleteTextView
                    android:id="@+id/acSelectToday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:dropDownAnchor="@id/acSelectToday"
                    android:focusable="false"
                    android:fontFamily="@font/sen_regular"
                    android:hint="@string/str_category"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_20sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorgrey"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="visible" />

                <ImageView
                    android:id="@id/image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />
            </RelativeLayout>


            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/rectangle_grey"
                android:fontFamily="@font/sen_regular"
                android:hint="@string/str_password"
                android:inputType="textPassword"
                android:maxLength="15"
                android:maxLines="1"
                android:paddingStart="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/colorgrey"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/rrCategory" />


            <EditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/rectangle_grey"
                android:fontFamily="@font/sen_regular"
                android:hint="@string/str_confirm_password"
                android:inputType="textPassword"
                android:maxLength="15"
                android:maxLines="1"
                android:paddingStart="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/colorgrey"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/edtPassword" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/rectangle_btn"
                android:fontFamily="@font/sen_bold"
                android:gravity="center"
                android:padding="@dimen/_14sdp"
                android:text="@string/str_signup"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintTop_toBottomOf="@id/edtConfirmPassword" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tvSignUp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sen_medium"
                    android:text="@string/str_already_have_an_account"
                    android:textColor="@color/colorgrey"
                    android:textSize="@dimen/_11sdp" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:fontFamily="@font/sen_semibold"
                    android:text="@string/str_login"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="@dimen/_11sdp" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/pbLoadData"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:theme="@style/CircularProgress"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
